cluster/gitops/system-controllers/intel-resource-drivers/gpu/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: intel-resource-drivers-gpu
specs:
  - description: intel-resource-drivers-gpu
    endpointSelector:
      matchLabels:
        app: intel-gpu-resource-driver
    egress:
      # Call k8s to watch for when the resource slices are changed
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
    ingress:
      # Kubelet for healthcheck. The chart renders the startup/liveness gRPC
      # probes whenever kubeletPlugin.healthcheckPort > 0, independently of
      # healthMonitoring -- without this rule the startupProbe fails closed and
      # the kubelet kills every plugin pod.
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "51516"
                protocol: TCP
